--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+
+# see _data/jobnav.yml
+# this is index of a node having the subnodes (node containing "developers/technology stacks")
+jobnav_developers_node : 1
+
 # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:month/:day/:title
