--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Metajob
-tagline: Site Tagline
+title : <small>100% </small><strong>remote&nbsp;jobs</strong>
+tagline: All remote jobs in one place
 author :
   name : Dmitri Dmitri
 #  email : blah@email.test
@@ -64,6 +64,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   BASE_PATH : false
 
+
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
   #
@@ -72,7 +73,8 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : /assets/themes/bootstrap
+  ASSET_PATH : /assets/themes/restart
+  THEME : restart
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
