JSON file update

--- a/assets/data/unknown.json
+++ b/assets/data/unknown.json
@@ -24,7 +24,7 @@
     ],
     "tagsNames1": [
       "100% remote",
-      "America timezones"
+      "American time zones"
     ],
     "tagsNames2": [
       "c",
@@ -123,6 +123,98 @@
     "tagsNames2": []
   },
   {
+    "id": "USWHbrPeT3aznayss9OOqA",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "indeed.co.uk-2",
+    "url": "http://www.indeed.co.uk/viewjob?t=Progress&c=Eclipse+Total+Solutions&l=Home+Based&jk=0df89a5fda7a395a&rtk=1bu3eptjn17oq6ht&from=rss",
+    "title": "Progress / Openedge Senior Developer /Consultant To 60K - Eclipse Total Solutions Limited - Home Based",
+    "content": "<div><b>Progress / Openedge Senior Developer /Consultant To 60K</b><br><span>Eclipse Total Solutions Limited</span> -<span>Home Based</span><div><span>Permanent</span></div></div><span>With Clients in the UK, Ireland and Europe our award winning client are looking to expand their brilliant team with traditional developers who enjoy their tech.<br><br>Hands on, with an eye for detail and 'get the job done right 1st time' attitude individuals are requested to apply.<br><br>You must posses the 'core' progress values, yet understand the latest technologies as well as be able to work under pressure.<br><br>We require people that will share ideas and experiences who are up for a 'debate!' on the road map of the future of the business.<br><br><b>Skill set:</b> - Progress,Openedge, Microsoft.Net, .Net, java script, Laravel, PHP, Telerik NativeScript, Telerik, CSS, HTML</span>",
+    "urlFetchPending": false,
+    "published": "Oct 24, 2017 11:44:47 PM",
+    "tags": [
+      "TITLE1_unknown",
+      "TZ_Europe",
+      "REMOTE1_100"
+    ],
+    "tagsNames1": [
+      "100% remote",
+      "European time zones"
+    ],
+    "tagsNames2": []
+  },
+  {
+    "id": "6xh4sk1aRQS3nxle-hHphw",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "indeed.co.uk-2",
+    "url": "http://www.indeed.co.uk/viewjob?t=Progress&c=Eclipse+Total+Solutions&l=Home+Based&jk=0df89a5fda7a395a&rtk=1bu5csft316v50jj&from=rss",
+    "title": "Progress / Openedge Senior Developer /Consultant To 60K - Eclipse Total Solutions Limited - Home Based",
+    "content": "<div><b>Progress / Openedge Senior Developer /Consultant To 60K</b><br><span>Eclipse Total Solutions Limited</span> -<span>Home Based</span><div><span>Permanent</span></div></div><span>With Clients in the UK, Ireland and Europe our award winning client are looking to expand their brilliant team with traditional developers who enjoy their tech.<br><br>Hands on, with an eye for detail and 'get the job done right 1st time' attitude individuals are requested to apply.<br><br>You must posses the 'core' progress values, yet understand the latest technologies as well as be able to work under pressure.<br><br>We require people that will share ideas and experiences who are up for a 'debate!' on the road map of the future of the business.<br><br><b>Skill set:</b> - Progress,Openedge, Microsoft.Net, .Net, java script, Laravel, PHP, Telerik NativeScript, Telerik, CSS, HTML</span>",
+    "urlFetchPending": false,
+    "published": "Oct 24, 2017 11:44:47 PM",
+    "tags": [
+      "TITLE1_unknown",
+      "TZ_Europe",
+      "REMOTE1_100"
+    ],
+    "tagsNames1": [
+      "100% remote",
+      "European time zones"
+    ],
+    "tagsNames2": []
+  },
+  {
+    "id": "2GrqKxuZSheCEza7cK2-aA",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "indeed.co.uk-2",
+    "url": "http://www.indeed.co.uk/viewjob?t=Progress&c=Eclipse+Total+Solutions&l=Home+Based&jk=0df89a5fda7a395a&rtk=1bu5jdnsa14bm0uh&from=rss",
+    "title": "Progress / Openedge Senior Developer /Consultant To 60K - Eclipse Total Solutions Limited - Home Based",
+    "content": "<div><b>Progress / Openedge Senior Developer /Consultant To 60K</b><br><span>Eclipse Total Solutions Limited</span> -<span>Home Based</span><div><span>Permanent</span></div></div><span>With Clients in the UK, Ireland and Europe our award winning client are looking to expand their brilliant team with traditional developers who enjoy their tech.<br><br>Hands on, with an eye for detail and 'get the job done right 1st time' attitude individuals are requested to apply.<br><br>You must posses the 'core' progress values, yet understand the latest technologies as well as be able to work under pressure.<br><br>We require people that will share ideas and experiences who are up for a 'debate!' on the road map of the future of the business.<br><br><b>Skill set:</b> - Progress,Openedge, Microsoft.Net, .Net, java script, Laravel, PHP, Telerik NativeScript, Telerik, CSS, HTML</span>",
+    "urlFetchPending": false,
+    "published": "Oct 24, 2017 11:44:47 PM",
+    "tags": [
+      "TITLE1_unknown",
+      "TZ_Europe",
+      "REMOTE1_100"
+    ],
+    "tagsNames1": [
+      "100% remote",
+      "European time zones"
+    ],
+    "tagsNames2": []
+  },
+  {
+    "id": "dsjponNSRt6N4S1vVJrhcA",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "indeed.co.uk-2",
+    "url": "http://www.indeed.co.uk/viewjob?t=Progress&c=Eclipse+Total+Solutions&l=Home+Based&jk=0df89a5fda7a395a&rtk=1bu83hs8n14896qc&from=rss",
+    "title": "Progress / Openedge Senior Developer /Consultant To 60K - Eclipse Total Solutions Limited - Home Based",
+    "content": "<div><b>Progress / Openedge Senior Developer /Consultant To 60K</b><br><span>Eclipse Total Solutions Limited</span> -<span>Home Based</span><div><span>Permanent</span></div></div><span>With Clients in the UK, Ireland and Europe our award winning client are looking to expand their brilliant team with traditional developers who enjoy their tech.<br><br>Hands on, with an eye for detail and 'get the job done right 1st time' attitude individuals are requested to apply.<br><br>You must posses the 'core' progress values, yet understand the latest technologies as well as be able to work under pressure.<br><br>We require people that will share ideas and experiences who are up for a 'debate!' on the road map of the future of the business.<br><br><b>Skill set:</b> - Progress,Openedge, Microsoft.Net, .Net, java script, Laravel, PHP, Telerik NativeScript, Telerik, CSS, HTML</span>",
+    "urlFetchPending": false,
+    "published": "Oct 24, 2017 11:44:47 PM",
+    "tags": [
+      "TITLE1_unknown",
+      "TZ_Europe",
+      "REMOTE1_100"
+    ],
+    "tagsNames1": [
+      "100% remote",
+      "European time zones"
+    ],
+    "tagsNames2": []
+  },
+  {
     "id": "MjSFOfzrTyuMBVbAcZBrXQ",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -163,7 +255,7 @@
     ],
     "tagsNames1": [
       "100% remote",
-      "US Pacific Time Zone"
+      "US Pacific time zone"
     ],
     "tagsNames2": []
   },
@@ -180,12 +272,12 @@
     "urlFetchPending": false,
     "published": "Oct 12, 2017 4:45:58 AM",
     "tags": [
-      "REMOTE1_50",
       "TITLE1_unknown",
+      "REMOTE1_100",
       "TZ_unknown"
     ],
     "tagsNames1": [
-      "50% remote"
+      "100% remote"
     ],
     "tagsNames2": []
   },
@@ -208,6 +300,29 @@
     ],
     "tagsNames1": [
       "100% remote"
+    ],
+    "tagsNames2": []
+  },
+  {
+    "id": "tiYCw9vURZqM5q7kWylj3w",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "workinstartups-consultants",
+    "url": "http://workinstartups.com/job-board/job/61971/technical-consultant-be-the-human-face-of-software-at-mongoose-gray/",
+    "title": "Technical Consultant. Be the human face of software.",
+    "content": "*BASED IN THE USA*<br /><br />*Content to be a small cog in a big wheel?* Then this isn’t for you.<br /><br />*Keen to be a brand ambassador?* – the one clients come to for expert advice? Step this way.<br /><br />*A well-established, investor-backed, software house.* We’re innovative, entrepreneurial, and collaborative. That means you won’t be bogged down in bureaucracy. You’ll be making a difference.<br /><br />*We need a technical consultant* who’ll own every stage of solutions: from concept and design to development and delivery into client sites. And you’ll be just as confident and comfortable with clients and stakeholders as you are with ERP and BPO. We want a charismatic, clear-talking human being, not a humanoid.<br /><br />*You have a technical background,* ideally as a programmer (C#.NET or Java), but you’ve moved into a consulting-type role. You’re articulate, engaging, and self-motivated. You’re a problem-solver, in business and in technology. You understand project management, the software development life cycle, and structured programming methods and controls.<br /><br />*Day to day, you’ll be providing design-documented, supportable and extensible solutions.* And you’ll be supporting partners, clients, and fellow consultants. But this is no humdrum desk job. There’ll be domestic and international travel, but with significant scope for remote working – we value the work/life balance.<br /><br />*On offer is a salary of up to USD $120,000 + excellent package + share options.* We look forward to hearing from you. And remember you don't fish without a hook. No resumes without a cover letter, please.",
+    "urlFetchPending": false,
+    "published": "Sep 26, 2017 10:27:35 PM",
+    "tags": [
+      "TZ_America",
+      "TITLE1_unknown",
+      "REMOTE1_100"
+    ],
+    "tagsNames1": [
+      "100% remote",
+      "American time zones"
     ],
     "tagsNames2": []
   }
