JSON file update

--- a/assets/data/unknown.json
+++ b/assets/data/unknown.json
@@ -215,6 +215,29 @@
     "tagsNames2": []
   },
   {
+    "id": "cTlz3uq7Q3aG6qCZzToBsQ",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "indeed.co.uk-2",
+    "url": "http://www.indeed.co.uk/viewjob?t=Progress&c=Eclipse+Total+Solutions&l=Home+Based&jk=0df89a5fda7a395a&rtk=1bubvb5p414bk386&from=rss",
+    "title": "Progress / Openedge Senior Developer /Consultant To 60K - Eclipse Total Solutions Limited - Home Based",
+    "content": "<div><b>Progress / Openedge Senior Developer /Consultant To 60K</b><br><span>Eclipse Total Solutions Limited</span>     -<span>Home Based</span>    <div>        <span>Permanent</span>        </div></div><span>With Clients in the UK, Ireland and Europe our award winning client are looking to expand their brilliant team with traditional developers who enjoy their tech.<br><br>Hands on, with an eye for detail and 'get the job done right 1st time' attitude individuals are requested to apply.<br><br>You must posses the 'core' progress values, yet understand the latest technologies as well as be able to work under pressure.<br><br>We require people that will share ideas and experiences who are up for a 'debate!' on the road map of the future of the business.<br><br><b>Skill set:</b> - Progress,Openedge, Microsoft.Net, .Net, java script, Laravel, PHP, Telerik NativeScript, Telerik, CSS, HTML</span>",
+    "urlFetchPending": false,
+    "published": "Oct 24, 2017 11:44:47 PM",
+    "tags": [
+      "TITLE1_unknown",
+      "TZ_Europe",
+      "REMOTE1_100"
+    ],
+    "tagsNames1": [
+      "100% remote",
+      "European time zones"
+    ],
+    "tagsNames2": []
+  },
+  {
     "id": "MjSFOfzrTyuMBVbAcZBrXQ",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
